<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/edchelp"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/qrcode"
            android:title="@string/menu_qr" />
        <item
            android:id="@+id/tambahoutlet"
            android:title="@string/menu_outlet" />
        <item
            android:id="@+id/promorequest"
            android:title="@string/menu_request_promo" />
        <item
            android:id="@+id/merchantforum"
            android:title="@string/menu_forum" />
        <item
            android:id="@+id/merchantloyalty"
            android:title="@string/menu_loyalty" />
    </group>
</menu>
