<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_stroke_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/report_thread"
            android:textAlignment="center"
            android:textColor="@color/toolbar_base"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_name"
                    android:textColor="@color/toolbar_base" />

                <TextView
                    android:id="@+id/report_tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/info_title"
                    android:textColor="@color/toolbar_base" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/report_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/background_custom_preview"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/toolbar_base" />

                <TextView
                    android:id="@+id/report_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/background_custom_preview"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/toolbar_base" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_checkbox_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never" />

        <CheckBox
            android:id="@+id/check_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/toolbar_base"
            android:text="@string/check_other"
            android:textColor="@color/toolbar_base" />

        <EditText
            android:id="@+id/etOther_Report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_grey"
            android:cursorVisible="true"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:overScrollMode="always"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColor="@color/blackPalette" />

        <TextView
            android:id="@+id/show_error_content_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="13dp"
            android:layout_marginTop="7dp"
            android:drawableStart="@drawable/ic_warning"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/dont_empty_this_edittext"
            android:textColor="@color/blackPalette"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel_Report"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_cancel_background"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnSubmit_Report"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_reply"
                android:text="@string/send"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>