<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgView_AddShowCase"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_below="@id/show_error_content_add_show_case"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/show_error_content_add_show_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_warning"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/dont_empty_this_edittext"
                android:textColor="@color/blackPalette"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etInputName_AddShowCae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgView_AddShowCase"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_stroke_white"
                android:hint="@string/input_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="4dp"
                android:textColor="@color/toolbar_base"
                android:textColorHint="@color/dark_grey_palette"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etInputName_AddShowCae"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel_AddShowCase"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_cancel_background"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnSubmit_AddShowCase"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_reply"
                    android:text="@string/send"
                    android:textAllCaps="false" />
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/add_img_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>