<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:nestedScrollingEnabled="false"
    tools:context=".Fragment.NewThread">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_new_thread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/new_thread"
            android:textAlignment="center"
            android:textColor="@color/toolbar_base"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle_NewThread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/parent"
            android:textColor="@color/toolbar_base"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTitle_NewThread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_edit_text"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/blackPalette" />

        <TextView
            android:id="@+id/show_error_title_new_thread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_warning"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/dont_empty_this_edittext"
            android:textColor="@color/blackPalette"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/content"
            android:textColor="@color/toolbar_base"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etContent_NewThread"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_edit_text"
            android:cursorVisible="true"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColor="@color/blackPalette" />

        <TextView
            android:id="@+id/show_error_content_new_thread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_warning"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/dont_empty_this_edittext"
            android:textColor="@color/blackPalette"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/background_stroke_white"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/photo_taker_new_thread"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_ic_photo"
                android:padding="5dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/blackPalette" />

            <ImageButton
                android:id="@+id/camera_taker_new_thread"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_ic_camera"
                android:padding="5dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/blackPalette" />

            <ImageButton
                android:id="@+id/file_taker_new_thread"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_ic_file"
                android:padding="5dp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_NewThread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never" />

        <Button
            android:id="@+id/btnSubmit_NewThread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_reply"
            android:text="@string/send"
            android:textColor="@color/white_color" />
    </LinearLayout>
</ScrollView>