<?xml version="1.0" encoding="utf-8"?>
<com.andexert.library.RippleView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ripple_status_promo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    app:rv_alpha="200"
    app:rv_color="@color/dark_grey_palette"
    app:rv_framerate="25"
    app:rv_rippleDuration="150">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/recycler_image_status_promotion"
                android:layout_width="170dp"
                android:layout_height="120dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promotion_title"
                    android:textColor="@color/blackPalette"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recycler_title_status_promotion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_date"
                    android:textColor="@color/blackPalette"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recycler_date_status_promotion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/blackPalette"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/blackPalette"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/recycler_condition_status_promotion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/abbey_palette" />
    </LinearLayout>

</com.andexert.library.RippleView>